@@ -267,6 +267,21 @@ Message.prototype.attachment = function(filename, name) {
 	return this;
 };
 
+Message.prototype.filestorage = function(storagename, id, name) {
+
+	var extension;
+	var type;
+
+	if (name) {
+		extension = framework_utils.getExtension(name);
+		type = framework_utils.getContentType(extension);
+	}
+
+	!this.files && (this.files = []);
+	this.files.push({ storage: storagename, name: name, filename: id, type: type, extension: extension });
+	return this;
+};
+
 Message.prototype.attachmentnosql = function(db, id, name) {
 
 	var extension;
@@ -302,7 +317,7 @@ Message.prototype.manually = function() {
  * @param {String} contentId the Content-ID (e.g. 'AB435BH'), must be unique across the email
  * @returns {Message}
  */
-Message.prototype.attachmentInline = function(filename, name, contentId) {
+Message.prototype.attachmentInline = Message.prototype.attachmentinline = function(filename, name, contentId) {
 	!name && (name = framework_utils.getName(filename));
 	!this.files && (this.files = []);
 	var extension = framework_utils.getExtension(name);
@@ -383,7 +398,6 @@ Mailer.prototype.destroy = function(obj) {
 };
 
 const ATTACHMENT_SO = { encoding: 'base64' };
-const ATTACHMENT_SO_NOSQL = { encoding: 'base64', start: 2000 };
 
 Mailer.prototype.$writeattachment = function(obj) {
 
@@ -397,10 +411,26 @@ Mailer.prototype.$writeattachment = function(obj) {
 
 	var stream;
 
-	if (attachment.nosql) {
+	if (attachment.storage) {
+		FILESTORAGE(attachment.storage).binary.readbase64(attachment.filename, function(err, stream, meta) {
+			if (err) {
+				F.error(err, 'Mail.filestorage()', attachment.filename);
+				mailer.$writeattachment(obj);
+			} else {
+
+				if (!attachment.name) {
+					attachment.name = meta.name;
+					attachment.type = meta.type;
+					attachment.extension = U.getExtension(meta.name);
+				}
+
+				writeattachemnt_stream(attachment, obj, stream);
+			}
+		});
+	} else if (attachment.nosql) {
 		NOSQL(attachment.nosql).binary.readbase64(attachment.filename, function(err, stream, meta) {
 			if (err) {
-				F.error(err, 'Mail.attachment()', attachment.filename);
+				F.error(err, 'Mail.attachmentnosql()', attachment.filename);
 				mailer.$writeattachment(obj);
 			} else {
 
